# clinvoice_finance

./: Cargo.toml  LICENSE  README.md
src/: currency.rs  error.rs  exchange.rs  exchange_mut.rs  exchange_rates.rs  historical_exchange_rates.rs  lib.rs  money.rs  request.rs
src/currency/: from_str.rs  try_from.rs
src/exchange_rates/: from_str.rs  try_from.rs
src/historical_exchange_rates/: heading.rs
src/money/: add.rs  add_assign.rs  checked_add.rs  checked_div.rs  checked_mul.rs  checked_rem.rs  checked_sub.rs  display.rs  div.rs  div_assign.rs  exchange.rs  exchange_mut.rs  from_str.rs  mul.rs  mul_assign.rs  rem.rs  rem_assign.rs  sub.rs  sub_assign.rs  try_from.rs
