# See https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "clinvoice-finance"
version = "0.3.0"
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "Structures for dealing with currencies and conversions between currencies for CLInvoice"

edition = "2021"
license = "GPL3"
readme = "README.md"
repository = "https://www.github.com/Iron-E/clinvoice-finance"

[dependencies]
clinvoice-error = {branch = "release/0.3", git = "https://github.com/Iron-E/clinvoice-error"}

chrono = "0.4"
futures = "0.3"
reqwest = "0.11"
rust_decimal = "1"
serde = {optional = true, version = "1"}
strum = {features = ["derive"], version = "0.24"}
thiserror = "1"
zip = "0.5"

[dev-dependencies]
pretty_assertions = "1"
tokio = {features = ["macros", "rt-multi-thread"], version = "1"}

[features]
default = []
serde = ["rust_decimal/serde-str", "serde/derive"]
