# See https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "For storing and asynchronously converting between (a subset of) ISO-4217 currencies"
edition = "2021"
name = "money2"
version = "0.7.0"

categories = ["asynchronous", "caching", "data-structures", "mathematics", "parser-implementations"]
keywords = ["currency", "exchange", "finance", "iso-4217", "money"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://www.github.com/Iron-E/money"

[dependencies]
chrono = "0.4"
futures = "0.3"
reqwest = "0.11"
rust_decimal = "1"
serde = {optional = true, version = "1"}
strum = {features = ["derive"], version = "0.24"}
thiserror = "1"
zip = "0.6"

[dev-dependencies]
pretty_assertions = "1"
tokio = {features = ["macros", "rt-multi-thread"], version = "1"}

[features]
default = []
serde = ["rust_decimal/serde-str", "serde/derive"]
