# See https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
authors = ["Iron-E <code.iron.e@gmail.com>"]
description = "For storing and asynchronously converting between (a subset of) ISO-4217 currencies"
edition = "2021"
name = "money2"
version = "1.2.1"

categories = ["asynchronous", "caching", "data-structures", "mathematics", "parser-implementations"]
documentation = "https://docs.rs/money2"
keywords = ["currency", "exchange", "finance", "iso-4217", "money"]
license = "GPL-3.0-only"
readme = "README.md"
repository = "https://github.com/Iron-E/money"

[dependencies]
chrono = "0.4"
num-traits = {optional = true, version = "0.2"}
reqwest = "0.11"
rust_decimal = "1"
serde = {optional = true, version = "1"}
strum = {features = ["derive"], version = "0.24"}
thiserror = "1"
tokio = {optional = true, version = "1"}
unicase = "2"
zip = "0.6"

[dev-dependencies]
pretty_assertions = "1"
tokio = {features = ["macros", "rt-multi-thread"], version = "1"}

[features]
default = []
all = ['history', 'num-traits', 'serde']
history = ['dep:tokio']
num-traits = ["dep:num-traits"]
serde = ["rust_decimal/serde-str", "serde/derive"]
